test/expected/regression-http-close.txt
/scripts/regression-http-close.js:20
        throw new Error('trace');
        ^

Error: trace
    at Server.close (/scripts/regression-http-close.js:r:c)
    at IncomingMessage.end (/scripts/regression-http-close.js:r:c)
    at Object.<anonymous> (/scripts/regression-http-close.js:r:c)
